--- a/licensing-service/src/main/resources/messages.properties
+++ b/licensing-service/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 license.create.message = License created %s
 license.update.message = License %s updated
-license.delete.message = Deleting license with id %s for the organization %s
+license.delete.message = Deleting license with id {0} for the organization {1}
+license.search.error.message = Unable to find license with License id {0} and Organization id {1}
